# live-subtitles

./: .gitignore  Cargo.toml  README.md  build.rs
src/: app.rs  audio.rs  config.rs  lib.rs  macos_capture.rs  main.rs  streaming.rs  ui.rs
src-tauri/: tauri.conf.json
src-tauri/src/: main.rs
src/transcribe/: local_whisper.rs  mod.rs  model_download.rs  openai.rs
subtitles-rs/: README.md
subtitles-rs/src/: app.rs  config.rs  macos_capture.rs  main.rs
subtitles-rs/src-tauri/: Cargo.toml  build.rs
subtitles-rs/src-tauri/capabilities/: main.json
subtitles-rs/src-tauri/src/: main.rs
subtitles-rs/src/transcribe/: mod.rs  model_download.rs
subtitles-rs/test_audio/: numbers.aiff  short.aiff
subtitles-rs/ui/: app.js  index.html  styles.css
subtitles-swift/: Package.swift  README.md
subtitles-swift/Resources/: Info.plist
subtitles-swift/Sources/SubtitlesApp/: AppConfig.swift  AudioPCMConverter.swift  PreferencesView.swift  SpeechTranscriber.swift  SubtitleEngine.swift  SubtitleStore.swift  SubtitlesApp.swift  SubtitlesView.swift  TranslationBroker.swift  main.swift
subtitles-swift/scripts/: build_app.sh
ui/: app.js  index.html  styles.css
